@@ -1,4 +1,5 @@
-MEDIUM_SUPPORTED = cdrom-2.6 netboot-2.6 # monolithic
+MEDIUM_SUPPORTED = cdrom-2.6 netboot-2.6
+MEDIUM_SUPPORTED_EXTRA = monolithic
 
 # The version of the kernel to use.
 KERNELVERSION = $(KERNELMAJOR).$(KERNELMINOR)-r4k-ip22
