@@ -9,6 +9,10 @@ debian-installer (2009xxxx) UNRELEASED; urgency=low
     version number).
   * Add cdebconf-newt-terminal to most images that include
     cdebconf-newt-udeb (although not floppies).
+  * Introduce *_SUPPORTED_EXTRA variables, which can be used to define
+    "optional" supported targets. Use this to allow monolithic to be built
+    without having to edit configuration files and without bloating official
+    builds.
 
  -- Otavio Salvador <otavio@debian.org>  Fri, 23 Jan 2009 15:32:36 -0200
 
